Feature/osdf view enhancements (#1336)
* Initial commit of new containers refactor.

* Minor changes including Functions class renaming and explicit type casting, where appropriate.

* Further changes as part of refactoring.

* Moved std::cout output from Functions class to parent Frame classes.

* Coding norms.

* Changes to includes.

* Switched std::cout for oops::Log.

* Switched to oops::Log in odfDemo.

* Changed local includes to include full path.

* Tweaks to code following introduction of new test that uses direct comparisons of FrameRows and FrameCols. This revealed a small bug that affected the alignment of columns when printing in FrameCols.

* Replaced runtime_errors with ioda::Exceptions.

* Missed chantes to ColumnMetadatum to avoid passing by reference.

* Added additional error checking and removed unused functions from ColumnMetadaatum.

* Replaced C-style explicit casts with C++ static_cast.

* Minor rename and data type change for local error variable to make purpose and intent clearer.

* Changed include guard convention.

* Minor changes to passing and return of references.

* Minor change to IFrame interface and derived classes.

* Added comments to FrameCols.

* Added comments to FrameRows.

* Minor changes to passing of references in View classes.

* Added comments to ViewCols.

* Added comments to ViewRows class.

* Added comments to IFrame.

* Added comments to IView class.

* Added comments to IFrameData.

* Added comments to IColsData and IRowsData.

* Added line break to IFrameData.

* Made Functions the base class for FunctionsCols and FunctionsRows to mimprove compartmentalisation.

* Updated comments to reflect altered Functions class relationships.

* Coding norms.

* Minor correction to comment.

* Additional comments to FrameColsData and FrameRowsData.

* Added comments for FrameColsData nd FrameRowsData.

* Added comments for FrameColsData nd FrameRowsData.

*

--- a/src/mains/odfDemo/CMakeLists.txt
+++ b/src/mains/odfDemo/CMakeLists.txt
@@ -12,3 +12,7 @@ ecbuild_add_executable( TARGET  ioda-odfDemo.x
 ecbuild_add_executable( TARGET  ioda-odfOutputCheck.x
                         SOURCES odfOutputCheck.cpp
                         LIBS    ioda )
+
+ecbuild_add_executable( TARGET  ioda-odfViewTest.x
+                        SOURCES odfViewTest.cpp
+                        LIBS    ioda )
