Construct stationID for obtype stationsnow (#1334)
* add stationsnow to obsgroups, and sonde statid gen

* Fix equals

* Implement append in ObsVector/ObsDataVector: fill new values with missing values (#1327)

* Implement append in ObsVector/ObsDataVector: fill new values with missing values

* get newnlocs from obsspace

---------

Co-authored-by: Anna Shlyaeva <anna.v.shlyaeva@noaa.gov>
Co-authored-by: Stephen Herbener <32968781+srherbener@users.noreply.github.com>

* do not read observations with missing observation value (#1329)

* add stationsnow to get metadatastringcolumn

* Add obsgroup stationsnow, first draft at statid creation

* Add stationsnow to sonde if statement

* Fixing git issuse

* Begin work on ctest, yaml and cmake files

* Edit cmake entry to use correct paths

---------

Co-authored-by: Anna Shlyaeva <annash@ucar.edu>
Co-authored-by: Anna Shlyaeva <anna.v.shlyaeva@noaa.gov>
Co-authored-by: Stephen Herbener <32968781+srherbener@users.noreply.github.com>
Co-authored-by: Toby Searle <14909402+twsearle@users.noreply.github.com>

--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -61,6 +61,7 @@ set(
   ioda/yaml/iodatest_odb_sonde_write.yaml
   ioda/yaml/iodatest_odb_sonde_write_mixed.yaml
   ioda/yaml/iodatest_odb_ssmis.yaml
+  ioda/yaml/iodatest_odb_stationsnow.yaml
   ioda/yaml/iodatest_odb_surface.yaml
   ioda/yaml/iodatest_odb_surfacecloud.yaml
   ioda/yaml/iodatest_odb_surfacesst.yaml
