--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2795,6 +2795,18 @@ if (odc_FOUND)
                             test-RadarReflectivity.hdf
                     TEST_DEPENDS get_ioda_test_data )
 
+  ecbuild_add_test( TARGET  test_ioda-convert_stationsnow_statid_odc
+                    TYPE    SCRIPT
+                    COMMAND bash
+                    ARGS    ${CMAKE_BINARY_DIR}/bin/ioda_compare.sh
+                            hdf5
+                            "${CMAKE_BINARY_DIR}/bin/ioda-odc-converter.x
+                            StationsnowStatid
+                            Data/testinput_tier_1/stationsnow_statid.odb
+                            ../share/test/testinput/odb_default_name_map.yaml ../share/test/testinput/iodatest_odb_stationsnow.yaml"
+                            test-StationsnowStatid.hdf
+                    TEST_DEPENDS get_ioda_test_data )
+
   ecbuild_add_test( TARGET  test_ioda-convert_oceansound_odc
                     TYPE    SCRIPT
                     COMMAND bash
