Introduce new application, ioda-filterObs.x, for standalone obs filtering operations (#1378)
* WIP: added framework of filterObs application

* Added printing of stats after the ObsSpace is constructed

* Changed config to allow for only one ObsSpace specification

* New tests for filterObs app. Need to add in compare tests
including reference files.

* Added tests to compare the output files from the ioda-filterObs.x application

* Trigger CI testing

* Fixed indentation

Co-authored-by: Francois Hebert <hebert@ucar.edu>

* Added explicit override

Co-authored-by: Francois Hebert <hebert@ucar.edu>

---------

Co-authored-by: Francois Hebert <hebert@ucar.edu>

--- a/src/mains/CMakeLists.txt
+++ b/src/mains/CMakeLists.txt
@@ -13,3 +13,4 @@ ecbuild_add_executable( TARGET  ioda-buildInputFileSet.x
 
 add_subdirectory( validator )
 add_subdirectory( odfDemo )
+add_subdirectory( filterObs )
