Introduce receipt time filter into the ioda-filterObs.x application (#1392)
* Added parameters for the receipt time filter, plus a framework function to do the filtering.

* Updated test names for ioda-filterObs.x tests - prep for adding in receipt time filter

* WIP: Almost have receipt time filter working

* Added check in the receipt time filter to only call ObsSpace::reduce when there were any locations that were rejected.

* Added doxygen comments to the new applyReceiptTimeFilter funciton.

--- a/test/testinput/iodatest_filter_obs_single_file_twfilt_rtfilt.yaml
+++ b/test/testinput/iodatest_filter_obs_single_file_twfilt_rtfilt.yaml
@@ -13,4 +13,8 @@ obs space:
   obsdataout:
     engine:
       type: H5File
-      obsfile: "testoutput/filter_obs_single_file_input.nc4"
+      obsfile: "testoutput/filter_obs_single_file_input_twfilt_rtfilt.nc4"
+
+receipt time filter:
+  cutoff time: "2024-01-10T00:03:30Z"
+  variable name: "MetaData/r2d2ReceiptTime"
