Updates for GeoCloud processing (#1389)
* Add GeoCloud to ODC.cpp and add `initial_vertco_reference` to geocloud yaml

* change method in channel indexing to sequential

* Add initial_vertco_reference to geocloud test

* Undo last commit

* Trigger CI

* Trigger CI

--- a/share/ioda/yaml/iodatest_odb_geocloud.yaml
+++ b/share/ioda/yaml/iodatest_odb_geocloud.yaml
@@ -1,11 +1,12 @@
 where:
   varno: [119,121,231,257,266,269]
 channel indexing:
-  method: constant
+  method: sequential
   varnos: [266]
 multichannel varnos: [119,121,231,257,266,269]
 variables:
 - name: initial_obsvalue
+- name: initial_vertco_reference
 - name: lat
 - name: lon
 - name: satellite_identifier
