--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -222,6 +222,8 @@ list( APPEND ioda_test_input
   testinput/iodatest_filter_obs_multi_file_twfilt.yaml
   testinput/iodatest_filter_obs_single_file_twfilt_rtfilt.yaml
   testinput/iodatest_filter_obs_multi_file_twfilt_rtfilt.yaml
+  testinput/iodatest_filter_obs_single_file_twfilt_rtfiltwindow.yaml
+  testinput/iodatest_filter_obs_multi_file_twfilt_rtfiltwindow.yaml
   testinput/iodatest_time_io.yaml
   testinput/iodatest_time_io_odc.yaml
   testinput/iodatest_time_io_reader_pool.yaml
@@ -1848,6 +1850,8 @@ ecbuild_add_test( TARGET  test_ioda_clean_filter_obs_files
                           "testoutput/filter_obs_multi_file_input_twfilt.nc4"
                           "testoutput/filter_obs_single_file_input_twfilt_rtfilt.nc4"
                           "testoutput/filter_obs_multi_file_input_twfilt_rtfilt.nc4"
+                          "testoutput/filter_obs_single_file_input_twfilt_rtfiltwindow.nc4"
+                          "testoutput/filter_obs_multi_file_input_twfilt_rtfiltwindow.nc4"
                 )
 
 # following tests run the filter app and create output files
@@ -1869,6 +1873,16 @@ ecbuild_add_test( TARGET  test_ioda_filter_obs_single_file_input_twfilt_rtfilt
 ecbuild_add_test( TARGET  test_ioda_filter_obs_multi_file_input_twfilt_rtfilt
                   COMMAND ${CMAKE_BINARY_DIR}/bin/ioda-filterObs.x
                   ARGS    "testinput/iodatest_filter_obs_multi_file_twfilt_rtfilt.yaml"
+                  TEST_DEPENDS get_ioda_test_data test_ioda_clean_filter_obs_files )
+
+ecbuild_add_test( TARGET  test_ioda_filter_obs_single_file_input_twfilt_rtfiltwindow
+                  COMMAND ${CMAKE_BINARY_DIR}/bin/ioda-filterObs.x
+                  ARGS    "testinput/iodatest_filter_obs_single_file_twfilt_rtfiltwindow.yaml"
+                  TEST_DEPENDS get_ioda_test_data test_ioda_clean_filter_obs_files )
+
+ecbuild_add_test( TARGET  test_ioda_filter_obs_multi_file_input_twfilt_rtfiltwindow
+                  COMMAND ${CMAKE_BINARY_DIR}/bin/ioda-filterObs.x
+                  ARGS    "testinput/iodatest_filter_obs_multi_file_twfilt_rtfiltwindow.yaml"
                   TEST_DEPENDS get_ioda_test_data test_ioda_clean_filter_obs_files )
 
 # following tests compare the output files of the filter app
@@ -1907,6 +1921,24 @@ ecbuild_add_test( TARGET  test_ioda_filter_obs_cmp_multi_file_input_twfilt_rtfil
                           "echo Checking filter obs (twindow + rtime, multiple file input)"
                           filter_obs_multi_file_input_twfilt_rtfilt.nc4
                   TEST_DEPENDS get_ioda_test_data test_ioda_filter_obs_multi_file_input_twfilt_rtfilt )
+
+ecbuild_add_test( TARGET  test_ioda_filter_obs_cmp_single_file_input_twfilt_rtfiltwindow
+                  TYPE    SCRIPT
+                  COMMAND bash
+                  ARGS    ${CMAKE_BINARY_DIR}/bin/ioda_compare.sh
+                          netcdf
+                          "echo Checking filter obs (twindow + rtime, single file input)"
+                          filter_obs_single_file_input_twfilt_rtfiltwindow.nc4
+                  TEST_DEPENDS get_ioda_test_data test_ioda_filter_obs_single_file_input_twfilt_rtfiltwindow )
+
+ecbuild_add_test( TARGET  test_ioda_filter_obs_cmp_multi_file_input_twfilt_rtfiltwindow
+                  TYPE    SCRIPT
+                  COMMAND bash
+                  ARGS    ${CMAKE_BINARY_DIR}/bin/ioda_compare.sh
+                          netcdf
+                          "echo Checking filter obs (twindow + rtime, multiple file input)"
+                          filter_obs_multi_file_input_twfilt_rtfiltwindow.nc4
+                  TEST_DEPENDS get_ioda_test_data test_ioda_filter_obs_multi_file_input_twfilt_rtfiltwindow )
 
 #####################################################################
 # Test the script backend
