--- a/test/testinput/iodatest_filter_obs_single_file_twfilt_rtfilt.yaml
+++ b/test/testinput/iodatest_filter_obs_single_file_twfilt_rtfilt.yaml
@@ -16,5 +16,8 @@ obs space:
       obsfile: "testoutput/filter_obs_single_file_input_twfilt_rtfilt.nc4"
 
 receipt time filter:
-  cutoff time: "2024-01-10T00:03:30Z"
+  accept window:
+    begin: "2024-01-10T00:00:00Z"
+    end: "2024-01-10T00:03:40Z"
   variable name: "MetaData/r2d2ReceiptTime"
+
