--- a/test/testinput/iodatest_filter_obs_single_file_twfilt_rtfiltwindow.yaml
+++ b/test/testinput/iodatest_filter_obs_single_file_twfilt_rtfiltwindow.yaml
@@ -4,22 +4,20 @@ time window:
   end: "2024-01-10T00:04:50Z"
 
 obs space:
-  name: "Multiple File Input"
+  name: "Single File Input"
   simulated variables: ['airTemperature']
   obsdatain:
     engine:
       type: H5File
-      obsfiles:
-      - "Data/testinput_tier_1/filter_obs_multi_file_p1.nc4"
-      - "Data/testinput_tier_1/filter_obs_multi_file_p2.nc4"
+      obsfile: "Data/testinput_tier_1/filter_obs_single_file.nc4"
   obsdataout:
     engine:
       type: H5File
-      obsfile: "testoutput/filter_obs_multi_file_input_twfilt_rtfilt.nc4"
+      obsfile: "testoutput/filter_obs_single_file_input_twfilt_rtfiltwindow.nc4"
 
 receipt time filter:
   accept window:
-    begin: "2024-01-10T00:00:00Z"
+    begin: "2024-01-10T00:02:30Z"
     end: "2024-01-10T00:03:40Z"
   variable name: "MetaData/r2d2ReceiptTime"
 
