Implement get_db with OSDF (#1394)
* Introduce pointer to an IFrame in private properties

* Instantiate IFrame pointer in constructor

* Add code to test populate osdf

* Add char data type to templated code

* Simple OSDF loadVar

* Reset osdf in destructor

* Add osdf test

* Fix segfault

* Set fake data recnums_

* Correct expected nrecs

* Add (temporary) specific ObsSpace OSDF test

* Comment out failing ObsSpaceOSDF tests

* Add explanatory comment to temporary new test

* Make yaml option for loading hardcoded OSDF data

* Use fullVarName function instead of duplicating it.

* Introduce hasColumn method

* Adapt 'has' logic for OSDF

* Add getColumnType function

* Modify dtype function for osdf

* Change fake data from double to float

* Adjust expected norms for fake data

* Remove debugs

* Fix coding norms

* Re-add testGetDb()

* Remove unneeded code in ObsSpace destructor

---------

Co-authored-by: Stephen Herbener <32968781+srherbener@users.noreply.github.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -132,7 +132,6 @@ list( APPEND ioda_test_input
   testinput/iodatest_obsspace_reader_pool.yaml
   testinput/iodatest_obsspace_append.yaml
   testinput/iodatest_obsspace_append_mpi.yaml
-  testinput/iodatest_obsspace_dataframe_flag.yaml
   testinput/iodatest_obsspace_datetime.yaml
   testinput/iodatest_obsspace_dist_write.yaml
   testinput/iodatest_obsspace_default_fill_values.yaml
@@ -152,6 +151,7 @@ list( APPEND ioda_test_input
   testinput/iodatest_obsspace_missing_obs_file_error_def_odc.yaml
   testinput/iodatest_obsspace_missing_obs_file_error_def_odc_reader_pool.yaml
   testinput/iodatest_obsspace_missing_obs_file_error_def_reader_pool.yaml
+  testinput/iodatest_obsspace_osdf.yaml
   testinput/iodatest_obsspace_out_dims_check.yaml
   testinput/iodatest_obsspace_grouping.yaml
   testinput/iodatest_obsspace_grouping_reader_pool.yaml
@@ -483,6 +483,12 @@ ecbuild_add_test( TARGET  test_ioda_obsspace
                   LIBS  ioda_test
                   TEST_DEPENDS get_ioda_test_data )
 
+ecbuild_add_test( TARGET  test_ioda_obsspace_osdf
+                  SOURCES mains/TestIodaObsSpaceOSDF.cc
+                  ARGS    "testinput/iodatest_obsspace_osdf.yaml"
+                  LIBS  ioda_test
+                  TEST_DEPENDS get_ioda_test_data )
+
 ecbuild_add_test( TARGET  test_ioda_obsspace_reader_pool
                   SOURCES mains/TestIodaObsSpace.cc
                   ARGS    "testinput/iodatest_obsspace_reader_pool.yaml"
@@ -603,12 +609,6 @@ endif()
 ecbuild_add_test( TARGET  test_ioda_obsspace_datetime
                   COMMAND test_ioda_obsspace
                   ARGS    "testinput/iodatest_obsspace_datetime.yaml"
-                  LIBS  ioda_test
-                  TEST_DEPENDS get_ioda_test_data )
-
-ecbuild_add_test( TARGET  test_ioda_obsspace_dataframe_flag
-                  COMMAND test_ioda_obsspace
-                  ARGS    "testinput/iodatest_obsspace_dataframe_flag.yaml"
                   LIBS  ioda_test
                   TEST_DEPENDS get_ioda_test_data )
 
